name:          hiss
build-type:    Simple
cabal-version: >= 1.10
category:      Application
version:       0.1
stability:     unstable
author:        Jonas Juselius <jonas.juselius@uit.no>,
maintainer:    Jonas Juselius <jonas.juselius@uit.no>
license:       OtherLicense
license-file:  LICENSE.md
copyright:     Copyright (C) 2014 Jonas Juselius
homepage:      https://github.com/bakerjonas/hiss
bug-reports:   https://github.com/issues
synopsis:      Haskell Interactive Snake Simulator
description:
    HISS Snake game
    .
    A simple snake game written in order to experiment with threepenny-gui.

extra-source-files:
    README.md
    .gitignore

data-dir:           static
data-files:         img/*.png, img/icons/*.png
                    css/*.css

source-repository head
    type: git
    location: git@github.com:bakerjonas/hiss.git

executable hiss.bin
    main-is: Snake.hs
    build-depends:
          base
        , mtl
        , threepenny-gui
        , random
    other-modules: Paths_hiss
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall -O2
        -threaded
        -fwarn-tabs
        -fdicts-cheap
        -funbox-strict-fields
        -fmax-simplifier-iterations=10

